# entropy

./: .dir-locals.el  .gitignore  CNAME  Cargo.toml  Entropy.toml  Makefile.toml  default.nix  flake.nix  index.html  readme.org  sql-playground.org
.cargo/: config
.github/workflows/: build.yml  refresh-site.yml
css/: event-details.css  events.css  home.css  rfcs.css
docs/initiatives/: readme.org  tech-groups-of-chandigarh.org
docs/rfcs/: fear-of-cops.org  meager-tech-culture.org  readme.md  readme.org
entropy/: Cargo.toml  readme.org
events/: first-entropy-catchup-meet.md  index.html  second-entropy-meet.md
events/2-hour-saree-draping-training-at-panchkula/: index.html
events/agility-and-spirit-of-experimentation/: index.html
events/all-girls-trip-to-leh-ladakh-(6n7d)/: index.html
events/auli-and-rishikesh-in-snow/: index.html
events/auli-and-rishikesh-on-long-weekend/: index.html
events/career-progression:-maximising-your-potential/: index.html
events/chal-cha-leh-ladakh-7-days-22nd-aug/: index.html
events/chandigarh-solidworks-user-group-first-meeting/: index.html
events/chandigarh-solidworks-user-group-fourth-meeting/: index.html
events/chandigarh-solidworks-user-group-second-meeting/: index.html
events/chandigarh-solidworks-user-group-third-meeting/: index.html
events/crash-course:-in-depth-product-management-from-vision-to-roadmap/: index.html
events/crash-course:-leadership-agility-developing-adaptive-actions/: index.html
events/crash-course:-leveraging-power-of-ai-with-microsoft-azure/: index.html
events/crash-course:-organization-design-for-effective-transformation/: index.html
events/custom-vision/: index.html
events/developer-days-2021/: index.html
events/docker-for-beginners/: index.html
events/entropy-2-bootstrap-a-tech-culture/: index.html
events/first-entropy-catchup-meet/: index.html
events/free-live-certified-webinar:-art-therapy-importance-of-art-in-life/: index.html
events/getting-started-with-cloud-computing/: index.html
events/getting-started-with-docker:-build-and-ship-any-application-anywhere/: index.html
events/htc-kashmir-(paradise-on-earth)-5days4nights-at-8999-inr/: index.html
events/htc-kashmir-(paradise-on-earth)-slots-opened/: index.html
events/introduction-to-power-bi/: index.html
events/introduction-to-sprakeasy/: index.html
events/kashmir-(paradise-on-earth)/: index.html
events/kasol-backpacking-trip-kheerganga-trek-(7d6n)/: index.html
events/learn-power-bi-dax/: index.html
events/leh-leh-group-trips-(6n7d)/: index.html
events/meetup-for-90's-and-2000s-dance-and-party-group/: index.html
groups/: entropy.md
initiatives/: meager-tech-culture.md  meager-tech-culture.org  tech-groups-of-chandigarh.org
src/: cli.rs  config.rs  lib.rs  main.rs  util.rs
src/db/: mod.rs  (+2 more)
(+98 files in other folders)
