[package]
authors = ["Charanjit Singh <ckhabra@gmail.com>"]
edition = "2018"
name = "entropy"
version = "0.1.0"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version =  "*", features = ["cookies", "gzip", "multipart", "json"] }
url = { version = "^2.2.2", features = ["serde"] }
diesel = { version = "*", features = ["sqlite", "serde_json", "chrono"] }
chrono = { version = "*", features = ["serde"] }
diesel_migrations = "*"
serde = "*"
serde_json = "*"
urlencoding = "*"
scraper = "*"
log = "*"
env_logger = "*"
structopt = "*"
rocket = "0.5.0-dev"