[package]
authors = ["Charanjit Singh <ckhabra@gmail.com>"]
edition = "2018"
name = "entropy"
version = "0.1.0"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version =  "*", features = ["cookies", "gzip", "multipart", "json"] }
url = { version = "^2.2.2", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "serde_json", "chrono", "numeric", "uuidv07" ] }
chrono = { version = "*", features = ["serde"] }
diesel_migrations = "*"
serde = "*"
serde_json = "*"
urlencoding = "*"
log = "*"
env_logger = "*"
structopt = "*"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rsass = "0.22.2"
fs_extra = "1.2.0"
anyhow = "1.0.42"
futures = "0.3.15"
figment = "0.10.6"
pulldown-cmark = "0.8.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.rocket]
version = "0.5.0-dev"
features = [ "json" ]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-dev"
default-features = false
features = ["diesel_postgres_pool"]
